namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: limited
  labels:
    name: limited
