pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-logger
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  - name: logger
    image: busybox
    command: ["sh", "-c", "while true; do echo 'Logging...'; sleep 10; done"]
