ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - simple-go.mine
    secretName: simple-tls
  rules:
    - host: simple-go.mine
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-go
                port:
                  number: 8080
